Fix: Change scroll snap behaviour for content section from mandatory to proximity to avoid jumpiness on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,6 +334,7 @@ html {
 
 #content-section {
     scroll-snap-align: start;
+    scroll-snap-type: y proximity;
     overflow: hidden;
 }
 
